--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				</div>
 			</div>
 			<footer class="footer">
-				<p>Copyright &copy; 2012–2014 Maachi LLC. All rights reserved. We &hearts; technology!</p>
-				<p class="small">Proudly in three cities: New York, San Francisco and Bogotá</p>
+				<p>Copyright &copy; 2012–2014 Maachi LLC. All rights reserved.</p>
+				<p class="small">New York, San Francisco and Bogotá</p>
 			</footer>
 		</div>
 		<section id="about" class="section">
